[project]
name = "recon"
version = "0.1.0"
description = "Backend-first Solana wallet intelligence API"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.40.2",
    "ddtrace>=3.12.0,<4",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "uvicorn[standard]==0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recon_api"]
